# San-Antonio-New-Resident-Agent

./: .env.example  .gitignore  CONTRIBUTIONS.md  Makefile  README.md  agent_test.py  requirements.txt  setup.py
app/: cache.py  models.py
app/services/: city_sa.py  cps_energy.py
backend/: .env.example  docker-compose.yml  requirements.txt
backend/app/: config.py  db.py  main.py  schemas.py
crawler/: main.py  pyproject.toml  query.py  requirements.txt  server.py  spec.md  stories.md
crawler/sa_resident_agent/agent/: intent.py
crawler/sa_resident_agent/api/: schemas.py
crawler/sa_resident_agent/crawlers/: base_crawler.py  city_crawler.py  cps_crawler.py  saws_crawler.py
crawler/sa_resident_agent/knowledge/: embedder.py  index_builder.py  retriever.py
crawler/tests/: conftest.py
crawler/tests/edge/: test_edge_cases.py
crawler/tests/load/: locustfile.py
crawler/tests/unit/: test_context.py  test_intent.py  test_vector_store.py
crawler/tests/user_stories/: test_user_stories.py
docs/: DATA.md  LOGGING.md  MODELS.md  MODEL_CARD.md  REPRODUCE.md  SPEC.md  STORIES.md  benchmarks.md  usage.md
frontend/: index.html  sa_new_resident_agent.py
grading/: manifest.yaml  traceability.yaml
reports/: benchmarks.json  coverage.xml  git_contributions.txt  integration.xml  security.txt  unit.xml  user_stories.xml  walkthrough.md
sa_resident_agent/agent/: agent.py  context.py  prompts.py
sa_resident_agent/api/: app.py  routes.py
sa_resident_agent/knowledge/: chunker.py  vector_store.py
scripts/: demo.sh  preflight.sh  regenerate.sh  regenerate_prompt.md
(+13 files in other folders)
